code/java/GlobalFilings/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Global Filings client library for Java

[![API Version](https://img.shields.io/badge/api-v1.0.0-blue)](https://developer.factset.com/api-catalog/global-filings-api)
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/globalfilings)](https://search.maven.org/artifact/com.factset.sdk/globalfilings)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)


The Filings API provides a comprehensive set of functionalities for searching and retrieving filing documents from various sources.

This API is designed to expose document search and document retrieval functionality. A document search will allow a request to query FactSet document databases based on certain search criteria specified in the request.

In addition, a document count request will provide information on the number of stories available for a particular security.

The reference endpoints, such as sources, formTypes, timeZones, and categories, provide comprehensive lists of available sources, form types, time zones, and categories, respectively.

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.0.0
- SDK version: 0.21.0
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>globalfilings</artifactId>
  <version>0.21.0</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.sdk:globalfilings:0.21.0"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.GlobalFilings.*;
import com.factset.sdk.GlobalFilings.auth.*;
import com.factset.sdk.GlobalFilings.models.*;
import com.factset.sdk.GlobalFilings.api.FilingsApiApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class FilingsApiApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        FilingsApiApi apiInstance = new FilingsApiApi(defaultClient);
        java.util.List<String> sources = Arrays.asList(); // java.util.List<String> | Code for document source to include.This is a comma-separated list. Use the ```/reference/sources``` endpoint to get the list of available sources.  
        String startDate = "0"; // String | Start Date. Format is YYYYMMDD or relative +/- days (0,-1,etc).  **Note:** **The API supports data from 1995 onwards. Ensure that the provided Date falls within this range for accurate results.** 
        String endDate = "0"; // String | End Date. Format is YYYYMMDD or relative +/- days (0,-1,etc).
        java.util.List<String> ids = Arrays.asList(); // java.util.List<String> | Requested symbols or securities.  This is a comma-separated list with a maximum limit of 1000.  Each symbol can be a FactSet exchange symbol, CUSIP, or SEDOL.
        try {
            ResponseCount result = apiInstance.getCount(sources, startDate, endDate, ids);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling FilingsApiApi#getCount");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.GlobalFilings.*;
import com.factset.sdk.GlobalFilings.api.FilingsApiApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

FilingsApiApi apiInstance = new FilingsApiApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.GlobalFilings.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/global-filings/v1*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FilingsApiApi* | [**getCount**](docs/FilingsApiApi.md#getCount) | **GET** /count | Returns the count of filings for specified source.
*FilingsApiApi* | [**getFilings**](docs/FilingsApiApi.md#getFilings) | **GET** /search | Returns the filings documents and related metadata within FactSet coverage.
*FilingsApiApi* | [**getFormtype**](docs/FilingsApiApi.md#getFormtype) | **GET** /reference/form-types | Returns the form types of EDGAR.
*FilingsApiApi* | [**getSources**](docs/FilingsApiApi.md#getSources) | **GET** /reference/sources | Returns the sources.
*FilingsApiApi* | [**getTimezone**](docs/FilingsApiApi.md#getTimezone) | **GET** /reference/time-zones | Returns the time zones.
*FilingsApiApi* | [**getcategories**](docs/FilingsApiApi.md#getcategories) | **GET** /reference/categories | Returns the categories.


## Documentation for Models

 - [ErrorExample](docs/ErrorExample.md)
 - [ErrorResponse](docs/ErrorResponse.md)
 - [InvestmentResearch](docs/InvestmentResearch.md)
 - [InvestmentResearchMeta](docs/InvestmentResearchMeta.md)
 - [InvestmentResearchMetaPagination](docs/InvestmentResearchMetaPagination.md)
 - [InvestmentResearchObject](docs/InvestmentResearchObject.md)
 - [ResponseCategies](docs/ResponseCategies.md)
 - [ResponseCategoriesObject](docs/ResponseCategoriesObject.md)
 - [ResponseCount](docs/ResponseCount.md)
 - [ResponseCountObject](docs/ResponseCountObject.md)
 - [ResponseFormtype](docs/ResponseFormtype.md)
 - [ResponseFormtypeObject](docs/ResponseFormtypeObject.md)
 - [ResponseSources](docs/ResponseSources.md)
 - [ResponseSourcesObject](docs/ResponseSourcesObject.md)
 - [ResponseSourcesObjectSourcesObject](docs/ResponseSourcesObjectSourcesObject.md)
 - [ResponseTime](docs/ResponseTime.md)
 - [ResponseTimeObject](docs/ResponseTimeObject.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
